futex.2: Minor improvement to FUTEX_CMP_REQUEUE_PI text
Reported-by: Darren Hart <dvhart@linux.intel.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -827,7 +827,8 @@ waiters that are waiting on the futex at
 However, for
 .BR FUTEX_CMP_REQUEUE_PI ,
 .I val
-is required to be 1.
+is required to be 1
+(since the the main point is to avoid a thundering herd).
 The remaining waiters are removed from the wait queue of the source futex at
 .I uaddr
 and added to the wait queue of the target futex at
