futex.2: Fix EINVAL description for FUTEX_CMP_REQUEUE_PI
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1172,15 +1172,23 @@ The kernel detected an inconsistency between the user-space state at
 .I uaddr
 and the kernel state;
 that is, the kernel detected a waiter which waits via
-.BR FUTEX_LOCK_PI ,
-.BR FUTEX_WAIT ,
+.BR FUTEX_WAIT
 or
-.BR FUTEX_WAIT_BITSET ,
+.BR FUTEX_WAIT_BITESET
 on
 .IR uaddr .
 .TP
 .B EINVAL
 .RB ( FUTEX_CMP_REQUEUE_PI )
+The kernel detected an inconsistency between the user-space state at
+.I uaddr
+and the kernel state;
+that is, the kernel detected a waiter which waits on
+.I uaddr
+via
+.BR FUTEX_LOCK_PI
+(instead of
+.BR FUTEX_WAIT_REQUEUE_PI ).
 .TP
 .B EINVAL
 Invalid argument.
