futex.2: ERRORS: Add EINVAL case for FUTEX_CMP_REQUEUE_PI
Reported-by: Darren Hart <dvhart@linux.intel.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1191,6 +1191,15 @@ via
 .BR FUTEX_WAIT_REQUEUE_PI ).
 .TP
 .B EINVAL
+.RB ( FUTEX_CMP_REQUEUE_PI )
+.\" FIXME This is a reworded version of Darren Hart's text.
+.\"       Please check that I did not introduce any errors.
+An attempt was made to requeue a waiter to a futex other than that
+specified by the matching
+.B FUTEX_WAIT_REQUEUE_PI
+call for that waiter.
+.TP
+.B EINVAL
 Invalid argument.
 .TP
 .BR ENOMEM
