futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -670,6 +670,12 @@ for the implementation of very specific IPC mechanisms).
 .\"       PI futex, but what determines whether the futex is of one
 .\"       kind of the other? We should have such a definition somewhere
 .\"       about here.
+.\"
+.\" FIXME In discussing errors for FUTEX_CMP_REQUEUE_PI, Darren Hart
+.\"       made the observation that "EINVAL is returned if the non-pi 
+.\"       to pi or op pairing semantics are violated."
+.\"       Probably there needs to be a general statement about this
+.\"       requirement, probably located at about this point in the page.
 
 PI futexes are operated on by specifying one of the following values in
 .IR futex_op :
