futex.2: ERRORS: add EINVAL case for FUTEX_CMP_REQUEUE_PI
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1206,6 +1206,12 @@ specified by the matching
 call for that waiter.
 .TP
 .B EINVAL
+.RB ( FUTEX_CMP_REQUEUE_PI )
+The
+.I val
+argument is not 1.
+.TP
+.B EINVAL
 Invalid argument.
 .TP
 .BR ENOMEM
