futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -871,6 +871,14 @@ via
 without requeueing on
 .IR uaddr2 .
 
+.\" FIXME Somewhere around here, something needs to be said about
+.\"       the pairing semantics of FUTEX_CMP_REQUEUE_PI and
+.\"       FUTEX_WAIT_REQUEUE_PI. (The Hart/Guniguntala paer says
+.\"       "FUTEX_WAIT_REQUEUE_PI and FUTEX_CMP_REQUEUE_PI must be
+.\"       paired only with each other." Could someone propose
+.\"       a statement about this pairing requirement and why it
+.\"       is needed?
+.\"
 .\" FIXME Please check the following. tglx said "The timeout argument
 .\"       is handled as described in FUTEX_WAIT.", but the truth is
 .\"       as below, AFAICS
