--- a/man2/futex.2
+++ b/man2/futex.2
@@ -626,9 +626,9 @@ bit shall be set in the futex value; in other words, the futex value is:
 .PP
 With this policy in place,
 a user-space application can acquire an unowned
-lock or release an uncontended lock using a atomic
+lock or release an uncontended lock using atomic
 .\" FIXME In the following line, I added "user-space". Okay?
-user-space instructions (e.g.,
+instructions executed in user-space (e.g.,
 .I cmpxchg
 on the x86 architecture).
 Locking an unowned lock simply consists of setting
