--- a/man2/futex.2
+++ b/man2/futex.2
@@ -656,9 +656,10 @@ After the RT-mutex is acquired, the futex value is updated accordingly,
 before the calling thread returns to user space.
 .\" FIXME ===== End of adapted Hart/Guniguntala text =====
 
-It is important
-.\" FIXME We need some explanation here of why it is important to note this
-to note that the kernel will update the futex value prior
+It is important to note
+.\" FIXME We need some explanation here of *why* it is important to
+.\" note this
+that the kernel will update the futex value prior
 to returning to user space.
 Unlike the other futex operations described above,
 the PI futex operations are designed
