futex.2: wfix: mention "virtual" when talking about memory addreses
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -35,12 +35,13 @@ The
 .BR futex ()
 system call provides a method for
 a program to wait for a value at a given address to change, and a
-method to wake up anyone waiting on a particular address (while the
-addresses for the same memory in separate processes may not be
-equal, the kernel maps them internally so the same memory mapped in
+method to wake up anyone waiting on a particular address.
+(While the
+virtual addresses for the same memory in separate processes may not be
+equal, the kernel maps them internally so that the same memory mapped in
 different locations will correspond for
 .BR futex ()
-calls).
+calls.)
 This system call is typically used to
 implement the contended case of a lock in shared memory, as
 described in
