futex.2: Clarify that FUTEX_PRIVATE_FLAG relates to *thread* synchronization
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -118,8 +118,9 @@ are as follows:
 .BR FUTEX_PRIVATE_FLAG " (since Linux 2.6.22)"
 .\" commit 34f01cc1f512fa783302982776895c73714ebbc2
 This option bit can be employed with all futex operations.
-It tells the kernel that the futex is process private and not shared
-with another process.
+It tells the kernel that the futex is process-private and not shared
+with another process
+(i.e., it is being used for synchronization between threads).
 This allows the kernel to choose the fast path for validating
 the user-space address and avoids expensive VMA lookups,
 taking reference counts on file backing store, and so on.
