--- a/man2/futex.2
+++ b/man2/futex.2
@@ -185,7 +185,7 @@ then the call fails immediately with the error
 .BR EAGAIN .
 .\" FIXME I added the following sentence. Please confirm that it is correct.
 The purpose of the test step is to detect races where
-another process changes that value of the futex between
+another process changes the value of the futex between
 the time it was last checked and the time of the
 .BR FUTEX_WAIT
 operation.
