--- a/man2/futex.2
+++ b/man2/futex.2
@@ -192,7 +192,7 @@ operation.
 
 If the
 .I timeout
-argument is non-NULL, its contents specify a relative timeout for the wait
+argument is non-NULL, its contents specify a relative timeout for the wait,
 .\" FIXME I added CLOCK_MONOTONIC here. Is it correct?
 measured according to the
 .BR CLOCK_MONOTONIC
