--- a/man2/futex.2
+++ b/man2/futex.2
@@ -248,9 +248,8 @@ are ignored.
 
 For
 .BR futex (7),
-this is executed if incrementing
-the count showed that there were waiters, once the futex value has been set
-to 1 (indicating that it is available).
+this is executed if incrementing the count showed that there were waiters,
+once the futex value has been set to 1 (indicating that it is available).
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
