futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -249,6 +249,7 @@ are ignored.
 For
 .BR futex (7),
 this is executed if incrementing the count showed that there were waiters,
+.\" FIXME How does "incrementing the count showed that there were waiters"?
 once the futex value has been set to 1 (indicating that it is available).
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
