futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -384,6 +384,10 @@ is typically either 1 or
 operation equivalent to
 .BR FUTEX_WAIT .)
 .\"
+.\" FIXME Here, it would be helpful to have an example of how
+.\"       FUTEX_CMP_REQUEUE might be used, at the same time illustrating
+.\"       why FUTEX_WAKE is unsuitable for the same use case.
+.\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
 .\" FIXME I added some FUTEX_WAKE_OP text, and I'd be happy if someone
