futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -633,6 +633,9 @@ priority-inversion problems that can be encountered with
 normal futex locks.
 
 .\"
+.\" FIXME Should we have some general description of the
+.\" priority-inversion problem here? (I'm not sure whether it's needed.)
+.\"
 .\" FIXME ===== Start of adapted Hart/Guniguntala text =====
 .\"       The following text is drawn from the Hart/Guniguntala paper,
 .\"       but I have reworded some pieces significantly. Please check it.
