--- a/man2/futex.2
+++ b/man2/futex.2
@@ -821,7 +821,7 @@ bit is set.
 .\"       Probably it would be helpful to say something about that in
 .\"       the man page.
 .\" FIXME And *how* does FUTEX_TRYLOCK_PI deal with this situation?
-User space cannot handle this race free.
+User space cannot handle this condition in a race-free manner
 
 The
 .IR uaddr2 ,
