--- a/man2/futex.2
+++ b/man2/futex.2
@@ -836,7 +836,7 @@ arguments are ignored.
 .TP
 .BR FUTEX_UNLOCK_PI " (since Linux 2.6.18)"
 .\" commit c87e2837be82df479a6bae9f155c43516d2feebc
-This operation wakes the top priority waiter which is waiting in
+This operation wakes the top priority waiter that is waiting in
 .B FUTEX_LOCK_PI
 on the futex address provided by the
 .I uaddr
