--- a/man2/futex.2
+++ b/man2/futex.2
@@ -880,7 +880,7 @@ However, for
 .BR FUTEX_CMP_REQUEUE_PI ,
 .I val
 is required to be 1
-(since the the main point is to avoid a thundering herd).
+(since the main point is to avoid a thundering herd).
 The remaining waiters are removed from the wait queue of the source futex at
 .I uaddr
 and added to the wait queue of the target futex at
