futex.2: SEEL ALSO: add author details + other minor tweaks
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1397,6 +1397,7 @@ read the sources of the futex user-space library referenced below.
 .\" and Rusty Russell (IBM Linux Technology Center).
 .\" This page written by bert hubert.
 .SH SEE ALSO
+.ad l
 .BR get_robust_list (2),
 .BR restart_syscall (2),
 .BR futex (7)
@@ -1411,22 +1412,24 @@ The following kernel source files:
 .IP *
 .I Documentation/locking/rt-mutex-design.txt
 .PP
+Franke, H., Russell, R., and Kirwood, M., 2002.
 \fIFuss, Futexes and Furwocks: Fast Userlevel Locking in Linux\fP
-(proceedings of the Ottawa Linux Symposium 2002), online at
+(from proceedings of the Ottawa Linux Symposium 2002),
 .br
 .UR http://kernel.org\:/doc\:/ols\:/2002\:/ols2002-pages-479-495.pdf
 .UE
 
-\fIA futex overview and update\fP, 11 November 2009
+Hart, D., 2009. \fIA futex overview and update\fP,
 .UR http://lwn.net/Articles/360699/
 .UE
 
+Hart, D. and Guniguntala, D., 2009.
 \fIRequeue-PI: Making Glibc Condvars PI-Aware\fP
-(2009 Real-Time Linux Workshop)
+(from proceedings of the 2009 Real-Time Linux Workshop),
 .UR http://lwn.net/images/conf/rtlws11/papers/proc/p10.pdf
 .UE
 
-\fIFutexes Are Tricky\fP (updated in 2011), Ulrich Drepper
+Drepper, U., 2011. \fIFutexes Are Tricky\fP,
 .UR http://www.akkadia.org/drepper/futex.pdf
 .UE
 .PP
