futex.2: Note that syscall() must be employed
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1383,7 +1383,9 @@ on the s390 architecture.
 .SH CONFORMING TO
 This system call is Linux-specific.
 .SH NOTES
-.PP
+Glibc does not provide a wrapper for this system call; call it using
+.BR syscall (2).
+
 To reiterate, bare futexes are not intended as an easy-to-use abstraction
 for end-users.
 (There is no wrapper function for this system call in glibc.)
