--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1309,7 +1309,7 @@ nor
 .RB ( FUTEX_LOCK_PI ,
 .BR FUTEX_TRYLOCK_PI ,
 .BR FUTEX_UNLOCK_PI ,
-.BR FUTEX_CMP_REQUEUE_PI 
+.BR FUTEX_CMP_REQUEUE_PI ,
 .BR FUTEX_WAIT_REQUEUE_PI )
 A run-time check determined that the operation not available.
 The PI futex operations are not implemented on all architectures and
