random_r.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/random_r.3
+++ b/man3/random_r.3
@@ -139,7 +139,7 @@ T{
 .br
 .BR initstate_r (),
 .BR setstate_r ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe race:buf
 .TE
 .SH CONFORMING TO
 These functions are nonstandard glibc extensions.
