getcontext.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getcontext.3
+++ b/man3/getcontext.3
@@ -161,7 +161,7 @@ Interface	Attribute	Value
 T{
 .BR getcontext (),
 .BR setcontext ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Safe race:ucp
 .TE
 .SH CONFORMING TO
 SUSv2, POSIX.1-2001.
