futex.2: SEE ALSO: add Documentation/robust-futex-ABI.txt
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1413,6 +1413,8 @@ The following kernel source files:
 .I Documentation/locking/rt-mutex.txt
 .IP *
 .I Documentation/locking/rt-mutex-design.txt
+.IP *
+.I Documentation/robust-futex-ABI.txt
 .PP
 Franke, H., Russell, R., and Kirwood, M., 2002.
 \fIFuss, Futexes and Furwocks: Fast Userlevel Locking in Linux\fP
