futex.2: srcfix: FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -710,6 +710,10 @@ for the implementation of very specific IPC mechanisms).
 .\"       to pi or op pairing semantics are violated."
 .\"       Probably there needs to be a general statement about this
 .\"       requirement, probably located at about this point in the page.
+.\"
+.\" FIXME Somewhere on this page (I guess under the discussion of PI
+.\"       futexes) we need a discussion of the FUTEX_OWNER_DIED bit.
+.\"       Can someone propose a text?
 
 PI futexes are operated on by specifying one of the following values in
 .IR futex_op :
@@ -785,21 +789,6 @@ The
 and
 .IR val3
 arguments are ignored.
-.\" FIXME
-.\" tglx noted the following "ERROR" case for FUTEX_LOCK_PI and
-.\" FUTEX_TRYLOCK_PI and FUTEX_WAIT_REQUEUE_PI:
-.\"
-.\"     > [EOWNERDIED] The owner of the futex died and the kernel made the 
-.\"     > caller the new owner. The kernel sets the FUTEX_OWNER_DIED bit
-.\"     > in the futex userspace value. Caller is responsible for cleanup
-.\"
-.\" However, there is no such thing as an EOWNERDIED error. I had a look
-.\" through the kernel source for the FUTEX_OWNER_DIED cases and didn't 
-.\" see an obvious error associated with them. Can you clarify? (I think 
-.\" the point is that this condition, which is described in
-.\" Documentation/robust-futexes.txt, is not an error as such. However,
-.\" I'm not yet sure of how to describe it in the man page.)
-.\" Suggestions please!
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
