futex.2: Add brief description of the priority inversion problem
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/futex.2
+++ b/man2/futex.2
@@ -631,11 +631,13 @@ arguments are ignored.
 Linux supports priority-inheritance (PI) futexes in order to handle
 priority-inversion problems that can be encountered with
 normal futex locks.
+Priority inversion is the problem that occurs when a high-priority
+process is blocked waiting to acquire a lock held by a low-priority process,
+while processes at an intermediate priority continuously preempt
+the low-priority process from the CPU.
+Consequently, the low-priority process makes no progress toward
+releasing the lock, and the high-priority process remains blocked.
 
-.\"
-.\" FIXME Should we have some general description of the
-.\" priority-inversion problem here? (I'm not sure whether it's needed.)
-.\"
 .\" FIXME ===== Start of adapted Hart/Guniguntala text =====
 .\"       The following text is drawn from the Hart/Guniguntala paper,
 .\"       but I have reworded some pieces significantly. Please check it.
@@ -944,7 +946,7 @@ argument is ignored.
 .\"       I'm not sure we need to say anything about this though.
 .\"       Comments?
 .\"
-.\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+    .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
 .SH RETURN VALUE
 .PP
