--- a/man2/futex.2
+++ b/man2/futex.2
@@ -36,10 +36,10 @@ The
 system call provides a method for
 a program to wait for a value at a given address to change, and a
 method to wake up anyone waiting on a particular address.
-(While the
-virtual addresses for the same memory in separate processes may not be
-equal, the kernel maps them internally so that the same memory mapped in
-different locations will correspond for
+(While the virtual addresses for the same memory in separate
+processes may not be equal,
+the kernel maps them internally so that the same memory mapped
+in different locations will correspond for
 .BR futex ()
 calls.)
 This system call is typically used to
@@ -156,7 +156,7 @@ as an absolute time based on
 If this option is not set, the kernel treats
 .I timeout
 as relative time,
-.\" FIXME I added CLOCK_MONOTONIC here. Is it correct?
+.\" FIXME I added CLOCK_MONOTONIC here. Okay?
 measured against the
 .BR CLOCK_MONOTONIC
 clock.
@@ -193,7 +193,7 @@ operation.
 If the
 .I timeout
 argument is non-NULL, its contents specify a relative timeout for the wait,
-.\" FIXME I added CLOCK_MONOTONIC here. Is it correct?
+.\" FIXME I added CLOCK_MONOTONIC here. Okay?
 measured according to the
 .BR CLOCK_MONOTONIC
 clock.
@@ -390,8 +390,8 @@ operation equivalent to
 .\"
 .\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\"
-.\" FIXME I added some FUTEX_WAKE_OP text, and I'd be happy if someone
-.\"       checked it.
+.\" FIXME I added a lengthy piece of text on FUTEX_WAKE_OP text,
+.\"       and I'd be happy if someone checked it.
 .TP
 .BR FUTEX_WAKE_OP " (since Linux 2.6.14)"
 .\" commit 4732efbeb997189d9f9b04708dc26bf8613ed721
@@ -678,7 +678,6 @@ bit shall be set in the futex value; in other words, the futex value is:
 With this policy in place,
 a user-space application can acquire an unowned
 lock or release an uncontended lock using atomic
-.\" FIXME In the following line, I added "user-space". Okay?
 instructions executed in user-space (e.g.,
 .I cmpxchg
 on the x86 architecture).
@@ -939,7 +938,7 @@ without requeueing on
 .\"       "FUTEX_WAIT_REQUEUE_PI and FUTEX_CMP_REQUEUE_PI must be
 .\"       paired only with each other." Could someone propose
 .\"       a statement about this pairing requirement and why it
-.\"       is needed?
+.\"       is needed?)
 .\"
 .\" FIXME Please check the following. tglx said "The timeout argument
 .\"       is handled as described in FUTEX_WAIT.", but the truth is
